src/objects/Access_Set__c.object
<CustomObject>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BU_Identifier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Channel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Grant_Access_By__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Group</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Access_By__c</fullName>
        <label>Grant Access By</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>Region</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                    <isActive>false</isActive>
                    <label>Global</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Product_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Grant_Access_By__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Pardot_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regions__c</fullName>
        <label>Regions</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Grant_Access_By__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Regions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Access Set</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Grant_Access_By__c</columns>
        <columns>Regions__c</columns>
        <columns>Country__c</columns>
        <columns>BU__c</columns>
        <columns>Customer_Group__c</columns>
        <columns>Channel__c</columns>
        <columns>Product_Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AS-{0000000000}</displayFormat>
        <label>Access Set Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>